<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/mimiClearColor"
    android:orientation="vertical" >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainWindow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/mimiClearColor"
        android:orientation="vertical" >
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@color/mimiClearColor"
            android:orientation="vertical" >
            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp" >
                <EditText
                    android:id="@+id/txtUser"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/mimi_connect_two_color_linear_gradient"
                    android:hint="@string/hintUsername" >
                    <requestFocus />
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayoutPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp" >
                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/mimi_connect_two_color_linear_gradient"
                    android:hint="@string/hintPassword"
                    android:inputType="textPassword" >
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/LinearLayout111"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal" >
                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/mimi_connect_left_corner_button_background"
                    android:onClick="myLoginhHandler"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/btnGoToSignup"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/mimi_connect_right_corner_button_background"
                    android:onClick="myLoginhHandler"
                    android:text="@string/signupbtntext"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical" >
                <CheckBox
                    android:id="@+id/automaticallyLogin"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/mimiClearColor"
                    android:gravity="center"
                    android:onClick="automaticallyLoginHandler"
                    android:text="@string/automaticallyLogin"
                    android:textColor="@color/mimiGrey" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/forgotPasswordLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical" >
                <Button
                    android:id="@+id/fogotPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:background="@color/mimiClearColor"
                    android:onClick="myLoginhHandler"
                    android:text="@string/forgotPassword"
                    android:textColor="@color/mimiColor"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>