<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blue" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:orientation="vertical" >
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />
        <LinearLayout
            android:id="@+id/tableLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp" >
                <EditText
                    android:id="@+id/oldPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/mimi_connect_two_color_linear_gradient"
                    android:hint="@string/hintOldPassword"
                    android:inputType="textPassword" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp" >
                <EditText
                    android:id="@+id/newPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/mimi_connect_two_color_linear_gradient"
                    android:hint="@string/hintNewPassword"
                    android:inputType="textPassword" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp" >
                <EditText
                    android:id="@+id/confirmNewPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/mimi_connect_two_color_linear_gradient"
                    android:hint="@string/hintConfirmNewPassword"
                    android:inputType="textPassword" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout111"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/mimi_connect_clear_button_background"
            android:orientation="vertical" >
            <Button
                android:id="@+id/btnEditPassword"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:background="@null"
                android:text="@string/editPassword"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>