<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blue" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:orientation="vertical" >
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >
            <EditText
                android:id="@+id/newDetail"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/mimi_connect_two_color_linear_gradient"
                android:gravity="center"
                android:hint="@string/hintNewDetail"
                android:inputType="phone" />
            <CheckBox
                android:id="@+id/newDetailDefault"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/mimi_connect_two_color_linear_gradient"
                android:gravity="center"
                android:text="@string/txtSetAsDefault"
                android:textColor="@color/mimiDardkerColor" />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/mimi_connect_clear_button_background"
            android:orientation="vertical" >
            <Button
                android:id="@+id/btnAddDetail"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:background="@null"
                android:text="@string/addDetail"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>