<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/mimiClearColor"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/mimi_connect_normal_button_background"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/txtBackupRestoreTitle"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/txtBackupRestoreMessage"
                android:textColor="@color/white"
                android:textSize="15dp" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/txtmsoraSlogan"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:baselineAligned="false"
            android:orientation="horizontal" >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:background="@drawable/mimi_connect_darker_button_background"
                android:orientation="vertical" >
                <Button
                    android:id="@+id/btnBackupOption"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:onClick="backupRestoreOption"
                    android:text="Backup" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:background="@drawable/mimi_connect_darker_button_background"
                android:orientation="vertical" >
                <Button
                    android:id="@+id/btnRestoreOption"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:onClick="backupRestoreOption"
                    android:text="Restore" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>